NLP TP/texts/robotics/robotics.stackexchange_0000059860.txt
Q:

ubuntu 14 LTS : indigo: fail to compile default_robot_hw_sim.cpp

Could not find gazebo_ros_control so lib...cloned gazebo_ros_pkgs into my catkskin. Get the following compile error: My question is , is this package ready for indigo ...I though it would pull from indigo-devel? I am running gazebo2.
default_robot_hw_sim.dir/src/default_robot_hw_sim.cpp.o
Built target gazebo_ros_control
/home/richard/catkin_ws/src/gazebo_ros_pkgs/gazebo_ros_control/src/default_robot_hw_sim.cpp: In member function ‘virtual bool gazebo_ros_control::DefaultRobotHWSim::initSim(const string&, ros::NodeHandle, gazebo::physics::ModelPtr, const urdf::Model*, std::vector<transmission_interface::TransmissionInfo>)’:
/home/richard/catkin_ws/src/gazebo_ros_pkgs/gazebo_ros_control/src/default_robot_hw_sim.cpp:155:78: error: ‘struct transmission_interface::ActuatorInfo’ has no member named ‘hardware_interface_’
const std::string& hardware_interface = transmissions[j].actuators_[0].hardware_interface_;
^
/home/richard/catkin_ws/src/gazebo_ros_pkgs/gazebo_ros_control/src/default_robot_hw_sim.cpp:220:45: error: no matching function for call to ‘control_toolbox::Pid::init(const ros::NodeHandle&, bool)’
if (pid_controllers_[j].init(nh,true))
^
/home/richard/catkin_ws/src/gazebo_ros_pkgs/gazebo_ros_control/src/default_robot_hw_sim.cpp:220:45: note: candidate is:
In file included from /home/richard/catkin_ws/src/gazebo_ros_pkgs/gazebo_ros_control/src/default_robot_hw_sim.cpp:45:0:
/opt/ros/indigo/include/control_toolbox/pid.h:201:8: note: bool control_toolbox::Pid::init(const ros::NodeHandle&)
bool init(const ros::NodeHandle &n);
^
/opt/ros/indigo/include/control_toolbox/pid.h:201:8: note:   candidate expects 1 argument, 2 provided
make[2]: ***
[gazebo_ros_pkgs/gazebo_ros_control/CMakeFiles/default_robot_hw_sim.dir/src/default_robot_hw_sim.cpp.o] Error 1
make[1]: *** [gazebo_ros_pkgs/gazebo_ros_control/CMakeFiles/default_robot_hw_sim.dir/all] Error 2
make: *** [all] Error 2
Invoking "make" failed

Originally posted by rnunziata on ROS Answers with karma: 713 on 2014-06-04
Post score: 0

Original comments
Comment by rnunziata on 2014-06-05:
Is this question more suited for the gazebo question board?

A:

According to ros board issue should be fixed and released shortly.

Originally posted by rnunziata with karma: 713 on 2014-06-12
This answer was ACCEPTED on the original site
Post score: 0

